Fri Apr  7 06:57:20 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* commit.c [DEATH_STATE]: Pass -f to `ci'.

Thu Apr  6 13:05:15 1995  Jim Blandy  <jimb@totoro.bio.indiana.edu>

	* commit.c (checkaddfile): If we didn't manage to fopen the file,
	don't try to fclose it.

	* client.c (handle_m, handle_e): Use fwrite, rather than a loop of
	putc's.  Sometimes these streams are unbuffered.

Tue Apr  4 11:33:56 1995  Jim Blandy  <jimb@totoro.bio.indiana.edu>

	* (DISTFILES): Include cvsbug.sh, ChangeLog, NOTES, RCS-patches,
	README-rm-add, ChangeLog.fsf, sanity.sh, sanity.el, and
	.cvsignore.

Mon Mar 27 08:58:42 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* rcs.c (RCS_parsercsfile_i): Accept `dead' state regardless of
	DEATH_STATE define.  Revise comments regarding DEATH_STATE versus
	CVSDEA versus the scheme which uses a patched RCS.
	* README-rm-add, RCS-patches: Explain what versions of CVS need
	RCS patches.

Sat Mar 25 18:51:39 1995  Roland McGrath  <roland@churchy.gnu.ai.mit.edu>

	* server.c (server_cleanup): Only do the abysmal kludge of waiting
 	for command and draining the pipe #ifdef sun.  The code makes
 	assumptions not valid on all systems, and is only there to
 	workaround a SunOS bug.

Wed Mar 22 21:55:56 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* server.c (mkdir_p): Call stat only if we get the EACCES.  Faster
	and more elegant.

Tue Jan 31 20:59:19 1995  Ken Raeburn  <raeburn@cujo.cygnus.com>

	* server.c: Try to avoid starting the "rm -rf" at cleanup time
	until after subprocesses have finished.
	(command_fds_to_drain, max_command_fd): New variables.
	(do_cvs_command): Set them.
	(command_pid_is_dead): New variable.
	(wait_sig): New function.
	(server_cleanup): If command_pid is nonzero, wait for it to die,
	draining output from it in the meantime.  If nonzero SIG was
	passed, send a signal to the subprocess, to encourage it to die
	soon.

	* main.c (usage): Argument is now `const char *const *'.
	* cvs.h (usage): Changed prototype.