@@ -1,5 +1,8 @@
 Fri Apr  7 06:57:20 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)
 
+	* sanity.sh: For remote, set CVS_SERVER to test the right server,
+	rather than a random one from the PATH.
+
 	* commit.c [DEATH_STATE]: Pass -f to `ci'.
 
 Thu Apr  6 13:05:15 1995  Jim Blandy  <jimb@totoro.bio.indiana.edu>
